# forfuas-telemetry

./: .gitignore  Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/callsign/: Cargo.toml
crates/callsign/src/: callsign.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: buffer.rs  callsign_service.rs  config.rs  http_client.rs  main.rs  telemetry.rs  telemetry_service.rs
