[workspace]
resolver = "2"
members = [
    "crates/callsign",
    "crates/telemetry",
]
default-members = ["crates/telemetry"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
#
# workspace crates
#

callsign = { path = "crates/callsign" }

#
# External crates 
#

dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

