[package]
name = "forfuav"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[dependencies]
dotenv.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rumqttc = "0.25.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"